# algorithms_and_riddles

./: .gitignore  README.md  array2d.hpp  dp.cpp  matrix_type_traits.hpp  max_sum_solution.hpp  meson.build  tests.cpp
islands/include/: dynamic_matrix.hpp  islands.hpp  meson.build
islands/src/: islands.cpp  meson.build
islands/test/: islands.cpp  meson.build
lib/: array2d.hpp  matrix_type_traits.hpp  max_sum_solution.hpp  meson.build
max_matrix_sum/include/: matrix_type_traits.hpp  max_sum_solution.hpp  meson.build
max_matrix_sum/include/max_matrix_sum/: matrix_type_traits.hpp
max_matrix_sum/src/: array2d.cpp  meson.build
max_matrix_sum/test/: meson.build  solver.cpp  solver_path.cpp
regexes/: meson.build
regexes/include/: matcher.hpp  meson.build  pattern_parser.hpp
regexes/src/: matcher.cpp  meson.build  pattern_parser.cpp  to_intermediate.cpp  to_intermediate.hpp
regexes/test/: matcher.cpp  meson.build  to_intermediate.cpp
test/: meson.build  solver.cpp
